Fixed ui spacing

--- a/frontend/src/app/components/landing-content/landing-content.component.css
+++ b/frontend/src/app/components/landing-content/landing-content.component.css
@@ -14,7 +14,7 @@ body {
     font-size: 24px;
     color: #333;
     margin-bottom: 80px;
-    margin-top: 150px;
+    margin-top: 80px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500; /* Medium weight for clarity */
     font-size: 24px;
